syntax = "proto3";

package zitadel.app.v2beta;
option go_package = "github.com/zitadel/zitadel/pkg/grpc/app/v2beta;app";

enum OIDCResponseType {
    OIDC_RESPONSE_TYPE_CODE = 0;
    OIDC_RESPONSE_TYPE_ID_TOKEN = 1;
    OIDC_RESPONSE_TYPE_ID_TOKEN_TOKEN = 2;
}

enum OIDCGrantType{
    OIDC_GRANT_TYPE_AUTHORIZATION_CODE = 0;
    OIDC_GRANT_TYPE_IMPLICIT = 1;
    OIDC_GRANT_TYPE_REFRESH_TOKEN = 2;
    OIDC_GRANT_TYPE_DEVICE_CODE = 3;
    OIDC_GRANT_TYPE_TOKEN_EXCHANGE = 4;
}

enum OIDCAppType {
    OIDC_APP_TYPE_WEB = 0;
    OIDC_APP_TYPE_USER_AGENT = 1;
    OIDC_APP_TYPE_NATIVE = 2;
}

enum OIDCAuthMethodType {
    OIDC_AUTH_METHOD_TYPE_BASIC = 0;
    OIDC_AUTH_METHOD_TYPE_POST = 1;
    OIDC_AUTH_METHOD_TYPE_NONE = 2;
    OIDC_AUTH_METHOD_TYPE_PRIVATE_KEY_JWT = 3;
}

enum OIDCVersion {
    OIDC_VERSION_1_0 = 0;
}

enum OIDCTokenType {
    OIDC_TOKEN_TYPE_BEARER = 0;
    OIDC_TOKEN_TYPE_JWT = 1;
}
